<?xml version="1.0"?>
<package format="2">
    <name>sts_behavior_tree_interface</name>
    <version>1.0.0</version>
    <description>Sts virtual interface implementation for behavior tree communication</description>
    <author>Nick Fiege, Sebastian Mueller, Robert Rudolph</author>
    <maintainer email="nick.fiege@streetscooter.com">Nick Fiege</maintainer>
    <maintainer email="sebastian.mueller2@streetscooter.com">Sebastian Mueller</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <!-- ros dependencys -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <test_depend>rosunit</test_depend>

    <!-- sts dependencys -->
    <depend>sts_core_utils</depend>
    <depend>sts_virtual_interface_msgs</depend>

    <!--<depend>actionlib_msgs</depend> -->

    <!-- external depends -->
    <!-- <depend>OpenMP</depend> -->
</package>
